fix post text overflow

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -273,7 +273,7 @@ button.close:hover {
 }
 
 .multi-line-content {
-  white-space: pre;
+  white-space: pre-line;
 }
 
 .post-comment .post-avatar {
